<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorProgress"
        tools:context=".RegistrationActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:padding="20dp">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_back" />

            <RelativeLayout
                android:id="@+id/rlHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/tvMsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_Create_Account"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/tvMsg"
                    android:text="@string/txt_Signup_to_start"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlHead"
                android:layout_marginTop="70dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/card_shape"
                        android:hint="@string/txt_Name"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorGray" />

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/card_shape"
                        android:hint="@string/txt_Email"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorGray" />

                    <EditText
                        android:id="@+id/etContactNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/card_shape"
                        android:hint="@string/txt_Contact_No"
                        android:inputType="number"
                        android:maxLength="10"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorGray" />

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/card_shape"
                        android:hint="@string/txt_Password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorGray" />

                    <TextView
                        android:id="@+id/btnSignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:background="@drawable/card_shape_fill"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/txt_Sign_up"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
</layout>